<resources>
    <string name="app_name">Movie Ticket Booking</string>
    <string name="welcome">Welcome to Movie Ticket Booking</string>
    <string name="book_now">Book Now</string>
    <string name="select_seat">Select Your Seat</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="sam_worthington">Sam Worthington</string>
    <string name="todo">TODO</string>
    <string name="back_button">Back Button</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="explore">Explore</string>
    <string name="expo">Explore</string>
    <string name="get_started">Get Started</string>
    <string name="you_can_browse_movies_and_shows_by_genre_search_for_a_specific_title_or_check_out_our_recommendations_for_you">You can browse movies and shows by genre, search for a specific title, or check out our recommendations for you.</string>
    <string name="watch_now_on_movieapp">Watch Now on CineSwift 🎬</string>
    <string name="background_image">Background Image</string>
    <string name="discover_your_favorite_movies">Discover Your Favorite Movies</string>
    <string name="avatar_the_way_to_water">Avatar: The Way to Water</string>
    <string name="u2b50_8_3">⭐ 8.3</string>
    <string name="drama">Drama</string>
    <string name="crime">Crime</string>
    <string name="action">Action</string>
    <string name="summary">Summary</string>
    <string name="the_way_of_water_expands_the_world_of_pandora_diving_into_its_vast_oceans_and_introducing_the_metkayina_a_na_vi_clan_adapted_to_life_in_the_sea_the_film_explores_themes_of_family_resilience_and_the_deep_bond_between_nature_and_its_inhabitants_as_jake_sully_neytiri_and_their_children_flee_their_homeland_to_escape_a_renewed_human_threat_they_must_learn_the_ways_of_the_water_and_prove_themselves_among_their_new_allies_stunning_visuals_immersive_world_building_and_an_emotionally_powerful_story_make_this_sequel_a_breathtaking_cinematic_experience_pushing_the_limits_of_filmmaking_and_visual_effects">The Way of Water* expands the world of Pandora, diving into its vast oceans and introducing the Metkayina, a Na’vi clan adapted to life in the sea. The film explores themes of family, resilience, and the deep bond between nature and its inhabitants. As Jake Sully, Neytiri, and their children flee their homeland to escape a renewed human threat, they must learn the ways of the water and prove themselves among their new allies. Stunning visuals, immersive world-building, and an emotionally powerful story make this sequel a breathtaking cinematic experience, pushing the limits of filmmaking and visual effects.</string>
    <string name="actors">Actors</string>
    <string name="zoe_salda_a">Zoe Saldaña</string>
    <string name="sigourney_weaver">Sigourney Weaver</string>
    <string name="avatar_the_way_of_water" />
    <string name="movie_image">Movie image</string>
    <string name="back">Back</string>
    <string name="favourites">Favourites</string>
    <string name="favourite">Favourites</string>
    <string name="cart">Cart</string>
    <string name="car">Cart</string>
    <string name="search_movies">Search Movies...</string>
    <string name="watch_now">Watch Now</string>
    <string name="movie_poster">1\n\n</string>
    <string name="best_movies">Best Movies</string>
    <string name="category">Category\n</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="movie_5">movie5</string>
    <string name="movie_6">movie6\n</string>
    <string name="movie_7">movie7</string>
    <string name="profile">Profile</string>
    <string name="movie_4">movie4</string>
    <string name="movie_3">movie3</string>
    <string name="movie_2">movie2</string>
    <string name="movie_1">movie1</string>
    <string name="avatar_movie">avatar</string>
    <string name="all">All</string>
    <string name="Drama">Drama</string>
    <string name="Crime">Crime</string>
    <string name="Action">Action</string>
    <string name="All">All</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_nregister_now">Don\'t have an account? \nRegister now</string>
    <string name="login_illustration">Login Illustration</string>
    <string name="log">Log In</string>
    <string name="enter_your_credentials_to_continue">Enter your credentials to continue</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="Login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="CineSwift">CineSwift</string>
    <string name="cineswift_logo">CineSwift Logo</string>
    <string name="your_gateway_to_unlimited_movies">Your Gateway to Unlimited Movies</string>
    <string name="Avatar">Avatar: The Way to Water</string>
    <string name="Avatar_the_way_to_water">Avatar: The Way to Water</string>
    <string name="_8_3">⭐ 8.3</string>
    <string name="Dram">Drama</string>
    <string name="crim">Crime</string>
    <string name="act">Action</string>
    <string name="sum">Summary</string>
    <string name="more_than_a_decade_after_the_events_of_the_first_avatar_jake_sully_now_lives_with_his_family_among_the_na_vi_on_pandora_when_an_old_enemy_the_rda_resources_development_administration_returns_to_exploit_the_planet_jake_and_neytiri_must_protect_their_home_to_escape_the_growing_threat_they_seek_refuge_with_the_metkayina_a_water_dwelling_na_vi_clan_as_they_adapt_to_their_new_environment_they_face_challenges_forge_new_bonds_and_prepare_for_an_epic_battle_to_defend_pandora_once_again">More than a decade after the events of the first Avatar, Jake Sully now lives with his family among the Na’vi on Pandora. When an old enemy, the RDA (Resources Development Administration), returns to exploit the planet, Jake and Neytiri must protect their home. To escape the growing threat, they seek refuge with the Metkayina, a water-dwelling Na’vi clan. As they adapt to their new environment, they face challenges, forge new bonds, and prepare for an epic battle to defend Pandora once again.</string>
    <string name="actor">Actors</string>
    <string name="watch">Watch Now</string>
    <string name="favorite_button_desc">favbutton\n</string>
    <string name="back_button_desc">back\n</string>
    <string name="movie_poster_desc">poster</string>
    <string name="one_place_nall_cinema">One place\nall cinema</string>
    <string name="Login2">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="it_s_simple_it_s_easy_everything_you_want_to_see_in_one_place">It\'s simple, it\'s easy everything you want to see in one place</string>
    <string name="discover_unlimited_movies">Discover Unlimited Movies</string>
    <string name="stream_your_favorite_movies_anytime_anywhere">Stream your favorite movies anytime, anywhere.</string>
    <string name="next">NEXT</string>
    <string name="next2">NEXT</string>
    <string name="watch_your_favorite_film_anywhere_nwithout_an_internet_connection">Watch your favorite film anywhere \nwithout an internet connection</string>
    <string name="offline">OFFLINE</string>
    <string name="invite_friends">INVITE FRIENDS</string>
    <string name="create_personal_movie_night_space_or_naccept_your_friends_invitations">Create personal movie night space or \naccept your friends’ invitations!</string>
    <string name="get_started2">Get Started</string>
    <string name="sign_up2">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password2">Password</string>
    <string name="show">Show</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="show2">Show</string>
    <string name="i_agree_with">I Agree with</string>
    <string name="privacy">privacy</string>
    <string name="and">and</string>
    <string name="policy">policy</string>
    <string name="sign_up3">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in2">Sign in</string>
    <string name="log_in4">Log In</string>
    <string name="remember_me">Remember me</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="share_with_friends">Share With Friends</string>
    <string name="_01_28_00_02_28_00">01:28:00 / 02:28:00</string>
    <string name="viewer_6">Viewer (6)</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="you">You</string>
    <string name="profile_picture2">Profile Picture</string>
    <string name="samantha_zein">Samantha Zein</string>
    <string name="profile_picture3">Profile Picture</string>
    <string name="alexis_sancho">Alexis Sancho</string>
    <string name="profile_picture4">Profile Picture</string>
    <string name="eva_angelina">Eva Angelina</string>
    <string name="profile_picture5">Profile Picture</string>
    <string name="robert_fox">Robert Fox</string>
    <string name="profile_picture6">Profile Picture</string>
    <string name="jane_cooper">Jane Cooper</string>
    <string name="download">Download</string>
    <string name="downloaded">Downloaded</string>
    <string name="downloading">Downloading</string>
    <string name="captain_america_the_winter_soldier">Captain america : The Winter Soldier</string>
    <string name="action_adventure">Action, Adventure</string>
    <string name="_206_32_1206">206:32 | 1206</string>
    <string name="captain_marvel">Captain Marvel</string>
    <string name="action_adventure2">Action, Adventure</string>
    <string name="_206_32_12062">206:32 | 1206</string>
    <string name="download1">Download</string>
    <string name="craft">Craft</string>
    <string name="amelia_rose">Amelia Rose</string>
    <string name="danilo_uscreen_tv">danilo@uscreen.tv</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="favorites">Favorites</string>
    <string name="downloads">Downloads</string>
    <string name="preferences">PREFERENCES</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="only_download_via_wi_fi">Only Download via Wi-Fi</string>
    <string name="play_in_background">Play in Background</string>
    <string name="content">CONTENT</string>
    <string name="log_now">Log Now</string>
    <string name="home">Home</string>
    <string name="searchbar">searchbar</string>
    <string name="logout">Logout</string>
    <string name="logout_icon">icon\n</string>
    <string name="user_profile">pro\n</string>
    <string name="favorites_icon">fav</string>
    <string name="language_icon">lanuage</string>
    <string name="download5">Download</string>
    <string name="home5">Home</string>
    <string name="profile4">Profile</string>
    <string name="recent_search">Recent Search</string>
    <string name="continue_watching">Continue watching</string>
    <string name="tintin">tintin</string>
    <string name="for_you">For You</string>
    <string name="the_snow_white">The Snow white</string>
    <string name="the_jungle">The Jungle</string>
    <string name="spiderman">SpiderMan</string>
    <string name="interstellar">Interstellar</string>
    <string name="recent_search1">Recent Search</string>
    <string name="search">Search</string>
    <string name="one_place_all_cinema">One Place All Cinema</string>
    <string name="signup">SignUp</string>

</resources>
