<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_dark_blue"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- Featured Movies Slider -->

            <TextView
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:text="Hi, Amelia!"
                android:textColor="@color/pink"
                android:textSize="24sp"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/avtar"
                        android:layout_width="300dp"
                        android:layout_height="180dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/avatar_movie"
                        android:scaleType="centerCrop"
                        android:src="@drawable/avtar" />

                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="180dp"
                        android:contentDescription="@string/movie_1"
                        android:scaleType="centerCrop"
                        android:src="@drawable/movie1" />
                </LinearLayout>
            </HorizontalScrollView>

            <!-- Best Movies Section -->
            <TextView
                style="@style/SectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/best_movies"
                android:textColor="@color/white" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="180dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/movie_2"
                        android:scaleType="centerCrop"
                        android:src="@drawable/movie2" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="180dp"
                        android:contentDescription="@string/movie_3"
                        android:scaleType="centerCrop"
                        android:src="@drawable/movie3" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="180dp"
                        android:layout_marginStart="8dp"
                        android:contentDescription="@string/movie_4"
                        android:scaleType="centerCrop"
                        android:src="@drawable/movie4" />
                </LinearLayout>
            </HorizontalScrollView>

            <!-- Category Section -->
            <TextView
                style="@style/SectionTitle"
                android:layout_width="92dp"
                android:layout_height="47dp"
                android:paddingTop="16dp"
                android:text="@string/category"
                android:textColor="@color/white" />

            <!-- Upcoming Movies Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/genre_bg"
                    android:padding="8dp"
                    android:text="@string/All"
                    android:textColor="@color/white" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/genre_bg"
                    android:padding="8dp"
                    android:text="@string/Drama"
                    android:textColor="@color/white" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/genre_bg"
                    android:padding="8dp"
                    android:text="@string/Crime"
                    android:textColor="@color/white" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/genre_bg"
                    android:padding="8dp"
                    android:text="@string/Action"
                    android:textColor="@color/white" />

            </LinearLayout>

            <TextView
                style="@style/SectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:paddingTop="16dp"
                android:text="@string/upcoming_movies"
                android:textColor="@color/white" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="180dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/movie_5"
                        android:scaleType="centerCrop"
                        android:src="@drawable/movie5" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="180dp"
                        android:contentDescription="@string/movie_6"
                        android:scaleType="centerCrop"
                        android:src="@drawable/movie6" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="180dp"
                        android:layout_marginStart="8dp"
                        android:contentDescription="@string/movie_7"
                        android:scaleType="centerCrop"
                        android:src="@drawable/movie7" />
                </LinearLayout>

            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="421dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/gray"
        app:backgroundTint="#4B4949"
        app:menu="@menu/bottom_navigation_menu" />

</LinearLayout>