<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#121212"
    android:padding="16dp"
    tools:context=".SearchActivity">

    <!-- Search Bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/search_bar_bg"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="12dp">

        <ImageView
            android:id="@+id/arrowImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/arrow"
            app:tint="#B0B0B0"
            android:contentDescription="@string/tintin"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/search"
            android:background="@null"
            android:textColor="#FFFFFF"
            android:textColorHint="#B0B0B0"
            android:padding="8dp"
            android:textSize="16sp" />

    </LinearLayout>

    <!-- Recent Searches -->

    <TextView
        android:layout_width="129dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:text="@string/recent_search1"
        android:textColor="#B0B0B0"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="79dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/recent_search_bg"
            android:padding="8dp"
            android:text="@string/interstellar"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/recent_search_bg"
            android:padding="8dp"
            android:text="@string/the_jungle"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/recent_search_bg"
            android:padding="8dp"
            android:text="@string/spiderman"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/recent_search_bg"
            android:padding="8dp"
            android:text="@string/the_snow_white"
            android:textColor="#FFFFFF" />


    </LinearLayout>

    <!-- For You Section -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_you"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_marginTop="16dp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:src="@drawable/movie8"
                android:scaleType="centerCrop"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/tintin"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:src="@drawable/movie9"
                android:scaleType="centerCrop"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/tintin"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:src="@drawable/movie10"
                android:scaleType="centerCrop"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/tintin"/>

        </LinearLayout>
    </HorizontalScrollView>

    <!-- Continue Watching Section -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_watching"
        android:textColor="#B0B0B0"
        android:textSize="14sp"
        android:layout_marginTop="16dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/tintin"
        android:scaleType="centerCrop"
        android:src="@drawable/tintin" />

</LinearLayout>
